# soroban-example-dapp

./: Cargo.toml  check_out.txt  initialize.sh  package-lock.json  package.json  resource_limits.js
.cargo/: config.toml
.stellar/identity/: token-admin.toml
components/organisms/pledge/: index.tsx
contracts/abundance/test_snapshots/test/: test.1.json  test_burn.1.json  transfer_from_insufficient_allowance.1.json  transfer_insufficient_balance.1.json
contracts/crowdfund/test_snapshots/test/: sale_expired_recipient_not_allowed.1.json  sale_not_running.1.json  sale_still_running.1.json  sale_successful_non_recipient_still_denied_after_withdrawal.1.json  sale_successful_only_recipient.1.json  sale_successful_recipient_withdraws_only_once.1.json  test_events.1.json  test_expired.1.json  test_success.1.json
contracts/crowdfund_registry/: Cargo.toml  creat_batch_crowdfunds.txt  creat_batch_crowdfunds_v2.txt
contracts/crowdfund_registry/python_scripts/: resources_limits.py
contracts/crowdfund_registry/src/: crowdfund_client.rs  deployer.rs  entity.rs  events.rs  lib.rs  storage_types.rs  test.rs  testutils.rs
contracts/crowdfund_registry/test_snapshots/test/: test_creat_batch_crowdfunds.1.json  test_initialize.1.json  test_initialize.2.json
hooks/: useSubscription.ts
